Fixed contrast errors

--- a/WebDev_GroupWork-4/styles/tickets.css
+++ b/WebDev_GroupWork-4/styles/tickets.css
@@ -122,12 +122,29 @@
 #booking-area h3{
   text-align: center;
   grid-area: tickets;
+  font-size: 25px;
+  margin: 0;
+  padding: 10px;
+}
+
+#booking-area h4{
+  font-size: 21px;
+  margin: 0;
+  padding: 5px;
 }
 
 #booking-form-div{
   grid-area: form;
   display: grid;
   justify-items: center;
+}
+
+form{
+  padding: 10px;
+}
+
+form label, form input{
+  font-size: 16px;
 }
 
 #booking-submit{
@@ -139,13 +156,15 @@
 
 #booking-submit input{
   font-family: 'Trajan-pro', serif;
+  font-size: 25px;
   box-sizing: border-box;
   border: none;
   background-color: rgba(179, 140, 74, 1);
   color: rgba(255, 255, 255, 1);
-  padding: 15px 32px;
+  padding: 10px 15px;
   text-decoration: none;
   transition: background-color .5s, color 1s;
+  cursor: pointer;
 }
 
 #booking-submit input:hover{
